# rayjs

./: .gitignore  .gitmodules  BRANCH_COMPARISON.md  CMakeLists.txt  generate-bindings.js  readme.md  tsconfig.json
.claude/: CLAUDE.md
.github/workflows/: build.yml  linux.yml  macos.yml  windows.yml
bindings/: gen_cheatsheet.js  webpack.config.js
bindings/src/: cgen.js  index.js  index.ts  quickjs.js  quickjs.ts  raylib-header.js  source_parser.js  typescript.js
bindings/typings/: lib.js_box2d.d.ts  lib.js_box2d_handbridged.d.ts  lib.js_ext_box2d_userdata.d.ts  lib.js_ext_tiled.d.ts  lib.js_raygui.d.ts  lib.js_raylib.d.ts  lib.js_raymath.d.ts  lib.js_rlgl.d.ts
cmake/: gen_ext_modules.cmake  web.cmake
docs/: adding_native_module.md  bindings_generator_pitfalls.md  bindings_struct_constructor_plan.md  box2d_api_coverage_plan.md  box2d_examples_plan.md  box2d_scarfy_platformer_plan.md  branch_feat_update_deps_varhar.md  branch_feat_web_wasm.md  cheatsheet.html  ext_modules.md  project_overview.md  tilemap_system.html  tilemap_system.md  web_target.md
docs/future-plans/: typings_distribution.md
docs/plans/: 02-raylib-6.0-upgrade.md  README.md
examples/: lib.raylib.d.ts
examples/box2d/: box2d_character_mover.js  box2d_material_friction.js  box2d_mouse_picking.js  box2d_one_way_platforms.js  box2d_raycast_vision.js  box2d_team_bullets.js  hello_physics.js  platformer_scarfy.js
examples/core/: core_input_gamepad.js  core_window_flags.js
examples/models/: models_animation.js  models_animation_gpu_skinning.js  models_bone_socket.js  models_constructor_smoketest.js  models_loading_gltf.js  models_loading_m3d.js
examples/models/resources/models/: models_yaw_pitch_roll.js
examples/raygui/: controls_test_suite.js
examples/raygui/image_exporter/: image_exporter.js
examples/shaders/: shaders_shadowmap.js
examples/textures/: textures_gif_player.js  textures_raw_data.js
examples/tiled/: README.md  dino_on_blocks.js  tiled_map.js
examples/tiled/resources/: dino_on_blocks_2x.tmj  dino_on_blocks_4x.tmj
lib/: README.md  box2d_userdata.d.ts  box2d_userdata.js  tiled.d.ts  tiled.js
migration/plans/: 01-quickjs-ng-migration.md  03-binding-gaps.md  README.md
src/: box2d_helpers.h  js_ext_modules.h  quickjs.c  rayjs.c  rayjs_base.c  rayjs_base.h  rayjs_generated.h  rextensions.h
src/bindings/: js_raylib_core.h
src/modules/: js_box2d.h  js_raygui.h  js_raylib.h  js_raymath.h  js_rcamera.h  js_rlgl.h  js_rlightmapper.h  js_rlights.h  quickjs-libc.c
src/overrides/quickjs/: PATCHES.md  quickjs.c  quickjs.h
src/overrides/raygui/src/: raygui.h
src/overrides/raylib/src/: CMakeLists.txt  raylib.h
